--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -12,17 +12,17 @@
     <form class="form">
       <label>
         First delay (ms)
-        <input type="number" name="delay" required />
+        <input type="number" name="delay" required class="js-delay" />
       </label>
       <label>
         Delay step (ms)
-        <input type="number" name="step" required />
+        <input type="number" name="step" required class="js-step" />
       </label>
       <label>
         Amount
-        <input type="number" name="amount" required />
+        <input type="number" name="amount" required class="js-amount" />
       </label>
-      <button type="submit">Create promises</button>
+      <button type="submit" class="btn-submit">Create promises</button>
     </form>
 
     <script src="js/03-promises.js" type="module"></script>
